--- a/Ribbit.cbp
+++ b/Ribbit.cbp
@@ -3,10 +3,11 @@
 	<FileVersion major="1" minor="6" />
 	<Project>
 		<Option title="Ribbit" />
+		<Option makefile_is_custom="1" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
-			<Target title="Release">
+			<Target title="all">
 				<Option output="bin/Release/Ribbit" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
@@ -18,10 +19,110 @@
 					<Add option="-s" />
 				</Linker>
 			</Target>
+			<Target title="doc">
+				<Option output="Ribbit" prefix_auto="1" extension_auto="1" />
+				<Option type="0" />
+				<Option compiler="gcc" />
+			</Target>
+			<Target title="clean">
+				<Option output="Ribbit" prefix_auto="1" extension_auto="1" />
+				<Option type="0" />
+				<Option compiler="gcc" />
+			</Target>
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="Doxyfile">
+			<Option target="all" />
+		</Unit>
+		<Unit filename="LICENSE">
+			<Option target="all" />
+		</Unit>
+		<Unit filename="Makefile">
+			<Option target="all" />
+		</Unit>
+		<Unit filename="README.md">
+			<Option target="all" />
+		</Unit>
+		<Unit filename="SHA256.C">
+			<Option compilerVar="CC" />
+			<Option target="all" />
+		</Unit>
+		<Unit filename="SHA256.H">
+			<Option target="all" />
+		</Unit>
+		<Unit filename="SHA256.o">
+			<Option target="all" />
+		</Unit>
+		<Unit filename="SIMPLESOCKET.C">
+			<Option compilerVar="CC" />
+			<Option target="all" />
+		</Unit>
+		<Unit filename="SIMPLESOCKET.H">
+			<Option target="all" />
+		</Unit>
+		<Unit filename="SIMPLESOCKET.o">
+			<Option target="all" />
+		</Unit>
+		<Unit filename="TASK1.C">
+			<Option compilerVar="CC" />
+			<Option target="all" />
+		</Unit>
+		<Unit filename="TASK1.H">
+			<Option target="all" />
+		</Unit>
+		<Unit filename="TASK1.o">
+			<Option target="all" />
+		</Unit>
+		<Unit filename="TASK2.o">
+			<Option target="all" />
+		</Unit>
+		<Unit filename="TASK3.o">
+			<Option target="all" />
+		</Unit>
+		<Unit filename="TASK4.o">
+			<Option target="all" />
+		</Unit>
+		<Unit filename="TASK5.o">
+			<Option target="all" />
+		</Unit>
+		<Unit filename="client">
+			<Option target="all" />
+		</Unit>
+		<Unit filename="client.C">
+			<Option compilerVar="CC" />
+			<Option target="all" />
+		</Unit>
+		<Unit filename="client.o">
+			<Option target="all" />
+		</Unit>
+		<Unit filename="main">
+			<Option target="all" />
+		</Unit>
+		<Unit filename="main.C">
+			<Option compilerVar="CC" />
+			<Option target="all" />
+		</Unit>
+		<Unit filename="main.o">
+			<Option target="all" />
+		</Unit>
+		<Unit filename="mainTest">
+			<Option target="all" />
+		</Unit>
+		<Unit filename="mainTest.o">
+			<Option target="all" />
+		</Unit>
+		<Unit filename="server">
+			<Option target="all" />
+		</Unit>
+		<Unit filename="server.C">
+			<Option compilerVar="CC" />
+			<Option target="all" />
+		</Unit>
+		<Unit filename="server.o">
+			<Option target="all" />
+		</Unit>
 		<Extensions>
 			<code_completion />
 			<debugger />
